# bb-net-lib

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: bbnetlib.h
src/: ClientObject.h  clientObject.c  clientObject.h  configurer.c  configurer.h  defines.c  defines.h  encryption.c  encryption.h  listen.c  listen.cpp  listen.h  makesock.c  makesock.cpp  send.c  send.cpp  send.h  socketPool.c  socketPool.h  socketfd.h  socketsNetLib.c  socketsNetLib.h  threadPool.c  threadPool.h
tests/: client.c  server.c
